--- a/index.html
+++ b/index.html
@@ -108,13 +108,15 @@
                 <div class="col-sm-6">
                     <p>Finition Artshot</p>
                     <select class="artshotFinish-selector">
-                        <option value="#f0f8ff">original</option>
-                        <option value="#444b4f">blackout</option>
+                        <option value="5">original</option>
+                        <option value="6">blackout</option>
                     </select>
                 </div>
                 <div class="col-sm-6">
                     <p>Finition</p>
                     <select class="finish-selector">
+                        <option value="5">original</option>
+                        <option value="6">blackout</option>
                         <option value="">alu</option>
                         <option value="">plexi</option>
                         <option value="">none</option>
@@ -125,15 +127,16 @@
                 <div class="col-sm-6">
                     <p>Cadre Artshot</p>
                     <select class="artshotFrame-selector">
-                        <option value="#0b0a0a">Black aluminium</option> 
-                        <option value="#faf8fb">Light wood</option> 
-                        <option value="#481f1a">Matt mahogany</option> 
-                        <option value="#cbc6c3">Alu brossé</option>  
+                        
                     </select>
                 </div>
                 <div class="col-sm-6">
                     <p>Cadre</p>
                     <select class="frame-selector">
+                        <option value="8">Black aluminium</option> 
+                        <option value="11">White wood</option> 
+                        <option value="10">Matt mahogany</option> 
+                        <option value="21">Alu brossé</option>  
                         <option value="2">None</option> 
                         <option value="4">Black satin</option> 
                         <option value="5">Oak</option>
